--- a/open_farm_analytics/open_farm_analytics.routing.yml
+++ b/open_farm_analytics/open_farm_analytics.routing.yml
@@ -13,3 +13,11 @@ open_farm_analytics.visualizer_form:
     _form: '\Drupal\open_farm_analytics\Form\OpenFarmAnalyticsVisualizerForm'
   requirements:
     _permission: 'access administration pages'
+open_farm_analytics.datavalue:
+  path: 'open_farm/api/datavalue'
+  defaults:
+    _controller: '\Drupal\open_farm_analytics\Controller\OpenFarmAnalyticsController::getDataValue'
+    #_title: 'Get visualization data'
+  methods: [GET]
+  requirements:
+    _permission: 'access content'
