--- a/open_farm_analytics/open_farm_analytics.services.yml
+++ b/open_farm_analytics/open_farm_analytics.services.yml
@@ -1,4 +1,4 @@
 services:
   open_farm_analytics.manager_service:
     class: Drupal\open_farm_analytics\Service\OpenFarmAnalyticsManager
-    arguments: ['@open_farm.manager_service', '@database']
+    arguments: ['@open_farm.manager_service', '@database', '@uuid']
